@@ -22,6 +22,7 @@ Version 1.7.0+svn:
     * Improved the layout to take less space in certain cases.
     * Increase the lineheight in the new dialogs.
     * The campaign dialog is redesigned.
+    * A click on a slider now properly sets the position.
 
   * Miscellaneous and bugfixes
     * Fixed a crash in some storyscreens.
